# Customer-Service_Agent

./: .env.example  LICENSE  README.md  pyproject.toml
.agents/skills/bug-fix-ci-repair/: SKILL.md
.agents/skills/codebase-onboarding/: SKILL.md
.agents/skills/feature-builder/: SKILL.md
.agents/skills/pr-review-refactor/: SKILL.md
.agents/skills/ui-qa-browser-automation/: SKILL.md
Knowledge/yuncangyouxuan_v2_fixed/: consistency_fix_report.md
Knowledge/yuncangyouxuan_v2_fixed/eval/: eval_cases.json
Knowledge/yuncangyouxuan_v2_fixed/fixtures/: orders.json  products.json  return_requests.json  risk_events.json  shipments.json  tickets.json  users.json
data/fixtures/: orders.json  products.json  return_requests.json  shipments.json  tickets.json  users.json
data/knowledge_base/: compliance_rules.md  logistics.md  member_account.md  products.md  refund_policy.md  support_sop.md
demo_agent/: __init__.py  app.py  chat_cli.py
demo_agent/agents/: compliance.py  intent.py  rag.py  supervisor.py  tool_agent.py
demo_agent/knowledge/: chunker.py  loader.py  retriever.py
demo_agent/memory/: session_memory.py
demo_agent/models/: __init__.py  client.py
demo_agent/schemas/: models.py  state.py
demo_agent/tools/: after_sales_tool.py  base.py  order_tool.py  product_tool.py  registry.py  risk_tool.py  shipment_tool.py  ticket_tool.py  user_tool.py
docs/: PRD_ECOMMERCE_CUSTOMER_SERVICE_AGENT.md  PRD_MVP.md
tests/: eval_cases.json  test_chat_flow.py  test_compliance.py  test_intent.py  test_memory.py  test_retriever.py  test_tools.py
(+14 files in other folders)
