[project]
name = "demo-agent"
version = "0.1.0"
description = "Local multi-agent customer support demo with virtual enterprise data"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "langgraph>=0.2.0",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
